--- a/index.html
+++ b/index.html
@@ -1,17 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App Pertama</title>
+  <title>NIMA Juice - Test</title>
 </head>
 <body>
-  <h1>Halo Dunia</h1>
-  <button onclick="kirim()">Kirim ke Server</button>
-  <pre id="hasil"></pre>
+  <h1>NIMA Juice</h1>
+
+  <h2>Registrasi User</h2>
+  <input id="username" placeholder="Username">
+  <input id="password" placeholder="Password" type="password">
+  <select id="role">
+    <option value="penjual">Penjual</option>
+    <option value="pembeli">Pembeli</option>
+  </select>
+  <button onclick="register()">Register</button>
+  <pre id="regResult"></pre>
+
+  <h2>Tambah Produk (Penjual)</h2>
+  <input id="prodName" placeholder="Nama Produk">
+  <input id="prodStock" placeholder="Stock" type="number">
+  <input id="sellerId" placeholder="ID Penjual">
+  <button onclick="addProduct()">Tambah Produk</button>
+  <pre id="addResult"></pre>
+
+  <h2>List Produk Ready (Pembeli)</h2>
+  <button onclick="listProducts()">Lihat Produk</button>
+  <pre id="listResult"></pre>
 
 <script>
-async function kirim(){
-  const r = await fetch("https://backend.nimajuice.workers.dev//");
-  document.getElementById("hasil").innerText = await r.text();
+const baseUrl = "https://backend.nimajuice.workers.dev"; // URL Worker
+
+async function register() {
+  const username = document.getElementById("username").value;
+  const password = document.getElementById("password").value;
+  const role = document.getElementById("role").value;
+
+  const r = await fetch(baseUrl + "/register", {
+    method:"POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({username, password, role})
+  });
+  document.getElementById("regResult").innerText = await r.text();
+}
+
+async function addProduct() {
+  const name = document.getElementById("prodName").value;
+  const stock = parseInt(document.getElementById("prodStock").value);
+  const seller_id = parseInt(document.getElementById("sellerId").value);
+
+  const r = await fetch(baseUrl + "/add-product", {
+    method:"POST",
+    headers: {"Content-Type":"application/json"},
+    body: JSON.stringify({name, stock, seller_id})
+  });
+  document.getElementById("addResult").innerText = await r.text();
+}
+
+async function listProducts() {
+  const r = await fetch(baseUrl + "/list-products");
+  const data = await r.json();
+  document.getElementById("listResult").innerText = JSON.stringify(data, null, 2);
 }
 </script>
 </body>
