--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -27,9 +27,10 @@ async function login() {
 
   if(text.startsWith("LOGIN BERHASIL")) {
     // redirect ke home
-    window.location.href = "../home/Home.html";
+    window.location.href = "..src/Home/Home.html";
   }
 }
 </script>
 </body>
 </html>
+
