--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -27,10 +27,11 @@ async function login() {
 
   if(text.startsWith("LOGIN BERHASIL")) {
     // redirect ke home
-    window.location.href = "..src/Home/Home.html";
+    window.location.href = "..home/Home.html";
   }
 }
 </script>
 </body>
 </html>
+
 
