--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="container">
   <h1>Selamat Datang di NIMA Juice</h1>
-  <a href="pages/login/Login.html" class="button">Masuk / Login</a>
+  <a href="src/pages/Login/Login.html" class="button">Login</a>
 </div>
 
 </body>
