--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -12,7 +12,8 @@
   <input id="username" placeholder="Username">
   <input id="password" placeholder="Password" type="password">
   <button onclick="login()">Login</button>
-  <div class="small">Belum punya akun? <a href="#">Daftar</a></div>
+ <div class="small">
+  Belum punya akun? <a href="Signup.html">Daftar</a></div>
   <pre id="result"></pre>
 </div>
 
@@ -33,5 +34,6 @@ async function login() {
 </script>
 </body>
 </html>
+
 
 
