--- a/src/pages/Login/Signup.html
+++ b/src/pages/Login/Signup.html
@@ -14,7 +14,7 @@
     <input id="password" placeholder="Password" type="password">
     <input id="confirmPassword" placeholder="Konfirmasi Password" type="password">
     <button onclick="signup()">Daftar</button>
-    <div class="small">Sudah punya akun? <a href="src/pages/Login/Login.html">Login</a></div>
+    <div class="small">Sudah punya akun? <a href="/NIMA-JUICE/src/pages/Login/Login.html">Login</a></div>
     <pre id="result"></pre>
   </div>
 
