--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -28,12 +28,13 @@ async function login() {
 
   if(text.startsWith("LOGIN BERHASIL")) {
     // redirect ke home
-    window.location.href = "..home/Home.html";
+    window.location.href = "../home/Home.html";
   }
 }
 </script>
 </body>
 </html>
+
 
 
 
