--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -34,7 +34,7 @@
 
       if (text.startsWith("LOGIN BERHASIL")) {
         // redirect ke home
-        window.location.href = "../home/Home.html";
+        window.location.href = "../Home/Home.html";
       }
     }
 
@@ -43,3 +43,4 @@
   </script>
 </body>
 </html>
+
