--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - NIMA Juice</title>
-  <link rel="stylesheet" href="../../src/styles/style.css" />
+  <link rel="stylesheet" href="../../assets/styles/style.css" />
 </head>
 <body>
   <div class="login-container">
@@ -13,10 +13,10 @@
     <input id="username" placeholder="Username" />
     <input id="password" placeholder="Password" type="password" />
 
-    <button onclick="login()">Login</button>
+    <button type="button" onclick="login()">Login</button>
 
     <div class="small">
-      Belum punya akun? <a href="Signup.html">Daftar</a>
+      Belum punya akun? <a href="../Signup/Signup.html">Daftar</a>
     </div>
 
     <pre id="result"></pre>
@@ -28,19 +28,18 @@
     async function login() {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-      const text = await loginUser(username, password);
 
-      document.getElementById("result").innerText = text;
+      const data = await loginUser(username, password);
+      console.log("Login response:", data);
 
-      if (text.startsWith("LOGIN BERHASIL")) {
-        // redirect ke home
+      document.getElementById("result").innerText = data.message;
+
+      if (data.message === "LOGIN BERHASIL") {
         window.location.href = "../Home/Home.html";
       }
     }
 
-    // expose ke global agar onclick bisa jalan
     window.login = login;
   </script>
 </body>
 </html>
-
