--- a/src/pages/Login/Login.html
+++ b/src/pages/Login/Login.html
@@ -16,7 +16,7 @@
     <button type="button" onclick="login()">Login</button>
 
     <div class="small">
-      Belum punya akun? <a href="../Signup/Signup.html">Daftar</a>
+      Belum punya akun? <a href="../Login/Signup.html">Daftar</a>
     </div>
 
     <pre id="result"></pre>
@@ -43,3 +43,4 @@
   </script>
 </body>
 </html>
+
