--- a/src/pages/Profile/Profile.html
+++ b/src/pages/Profile/Profile.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Profile / Setting</title>
-<link rel="stylesheet" href="../../src/styles/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profile - NIMA Juice</title>
+  <link rel="stylesheet" href="../../assets/styles/style.css" />
 </head>
 <body>
-<h1>Profile & Setting</h1>
-<p>Ini halaman pengaturan user / profile.</p>
+  <div class="profile-container">
+    <h1>Profile</h1>
+
+    <!-- Foto Profil -->
+    <div class="profile-photo">
+      <img id="profileImage" src="../../assets/images/default-avatar.png" alt="Foto Profil" width="120" height="120" />
+      <input type="file" id="photoInput" accept="image/*" />
+      <button type="button" onclick="updatePhoto()">Ubah Foto</button>
+    </div>
+
+    <!-- Nama -->
+    <div class="profile-field">
+      <label for="name">Nama:</label>
+      <input id="name" type="text" placeholder="Nama lengkap" />
+    </div>
+
+    <!-- Username -->
+    <div class="profile-field">
+      <label for="username">Username:</label>
+      <input id="username" type="text" placeholder="Username" />
+    </div>
+
+    <!-- Password -->
+    <div class="profile-field">
+      <label for="password">Password:</label>
+      <input id="password" type="password" placeholder="Password baru" />
+    </div>
+
+    <!-- Tombol Simpan -->
+    <button type="button" onclick="saveProfile()">Simpan Perubahan</button>
+
+    <!-- Tombol Keluar -->
+    <button type="button" onclick="logout()" class="logout-btn">Keluar</button>
+
+    <pre id="result"></pre>
+  </div>
+
+  <script type="module">
+    // import API kalau nanti ada endpoint update profile
+    // import { updateProfile } from '../../services/api.js';
+
+    function updatePhoto() {
+      const fileInput = document.getElementById("photoInput");
+      const file = fileInput.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function(e) {
+          document.getElementById("profileImage").src = e.target.result;
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+
+    async function saveProfile() {
+      const name = document.getElementById("name").value;
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      // sementara hanya tampilkan di layar
+      // nanti bisa dihubungkan ke backend update profile
+      const data = { name, username, password };
+      console.log("Profile updated:", data);
+      document.getElementById("result").innerText = "Perubahan tersimpan!";
+    }
+
+    function logout() {
+      // bersihkan session/token kalau ada
+      console.log("User logged out");
+      window.location.href = "../Login/Login.html";
+    }
+
+    window.updatePhoto = updatePhoto;
+    window.saveProfile = saveProfile;
+    window.logout = logout;
+  </script>
 </body>
 </html>
