--- a/src/pages/Login/Signup.html
+++ b/src/pages/Login/Signup.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Signup - NIMA Juice</title>
-  <link rel="stylesheet" href="../../assets/styles/style.css" />
+  <meta charset="UTF-8">
+  <title>Signup</title>
+  <link rel="stylesheet" href="../../assets/styles/style.css">
 </head>
 <body>
-  <div class="signup-container">
-    <h1>Daftar NIMA Juice</h1>
+  <div class="app">
+    <header class="app-header">
+      <span>Signup</span>
+    </header>
 
-    <input id="username" placeholder="Username" />
-    <input id="password" placeholder="Password" type="password" />
-    <input id="confirmPassword" placeholder="Konfirmasi Password" type="password" />
+    <main class="app-body">
+      <section class="section">
+        <div class="section-body">
+          <input id="username" placeholder="Username">
+          <input id="password" type="password" placeholder="Password">
+          <input id="confirmPassword" type="password" placeholder="Konfirmasi Password">
+          <button onclick="signup()">Daftar</button>
+          <pre id="result"></pre>
+        </div>
+      </section>
+    </main>
 
-    <button type="button" onclick="signup()">Daftar</button>
-
-    <div class="small">
-      Sudah punya akun? <a href="../Login/Login.html">Login</a>
-    </div>
-
-    <pre id="result"></pre>
+    <footer class="app-footer">
+      <nav class="menu-bar">
+        <a href="../Home/Home.html" class="menu-bar-item">Home</a>
+        <a href="../Profile/Profile.html" class="menu-bar-item">Profile</a>
+        <a href="../Login/Login.html" class="menu-bar-item">Login</a>
+        <a href="../Signup/Signup.html" class="menu-bar-item menu-bar-item--active">Daftar</a>
+      </nav>
+    </footer>
   </div>
 
   <script type="module">
     import { registerUser } from '../../services/api.js';
-
     async function signup() {
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
       const confirmPassword = document.getElementById("confirmPassword").value;
-
       if (password !== confirmPassword) {
         document.getElementById("result").innerText = "Password tidak sama!";
         return;
       }
-
       const data = await registerUser(username, password, "user");
-      console.log("Signup response:", data);
-
       document.getElementById("result").innerText = data.message;
-
       if (data.message === "USER TERDAFTAR") {
-        window.location.href = "../Login/Login.html";
+        window.location.href="../Login/Login.html";
       }
     }
-
     window.signup = signup;
   </script>
 </body>
